# quilora-ai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_REVIEW_IMPROVEMENTS.md  Dockerfile  OPENSPEC_AUDIT.md  README.md  docker-compose.yml  hello.py  llms.txt  pyproject.toml  requirements.txt  test_integration_llm.py
.github/workflows/: lint.yml  test.yml
docs/: PHASE2_COMPLETION.md  architecture.md  architecture_diagram.mmd  law_tutoring_platform_proposal_v2.md  law_tutoring_platform_proposal_v3.md  loom_pitch_script.md  troubleshooting.md
examples/: test_qdrant_basic.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ChatPanel.jsx  DocumentPanel.jsx  HealthBadge.jsx
frontend/src/pages/: AdminPage.jsx
openspec/: WHEN_TO_SPEC.md  project.md
openspec/changes/add-document-management-api/: proposal.md  tasks.md
openspec/changes/add-document-management-api/specs/api/: spec.md
openspec/changes/add-multi-llm-support/: proposal.md  tasks.md
openspec/changes/add-multi-llm-support/specs/llm-integration/: spec.md
openspec/changes/add-multi-llm-support/specs/pipelines/: spec.md
openspec/changes/add-production-readiness/: proposal.md  tasks.md
openspec/changes/add-production-readiness/specs/api/: spec.md
openspec/changes/add-production-readiness/specs/deployment/: spec.md
openspec/changes/add-production-readiness/specs/pipelines/: spec.md
openspec/changes/code-quality-improvements-jan-2026/: proposal.md  tasks.md
openspec/changes/implement-rag-application/: design.md  proposal.md  tasks.md
openspec/changes/implement-rag-application/specs/api/: spec.md
openspec/changes/implement-rag-application/specs/deployment/: spec.md
openspec/changes/implement-rag-application/specs/document-store/: spec.md
openspec/changes/implement-rag-application/specs/frontend/: spec.md
openspec/changes/implement-rag-application/specs/llm-integration/: spec.md
openspec/changes/implement-rag-application/specs/pipelines/: spec.md
openspec/changes/reconcile-mvp-scope/: proposal.md  tasks.md
openspec/changes/reconcile-mvp-scope/specs/api/: spec.md
openspec/changes/reconcile-mvp-scope/specs/deployment/: spec.md
openspec/changes/reconcile-mvp-scope/specs/frontend/: spec.md
openspec/changes/reconcile-mvp-scope/specs/llm-integration/: spec.md
openspec/changes/reconcile-mvp-scope/specs/pipelines/: spec.md
src/api/: __init__.py  main.py
src/api/routes/: config.py  documents.py  health.py  query.py
src/api/schemas/: documents.py  query.py
src/components/: __init__.py  custom_components.py
src/config/: settings.py
src/document_processing/: extractor.py
src/document_stores/: __init__.py  store.py
src/llm/: __init__.py  classifier.py  provider.py  router.py
src/middleware/: logging.py
src/pipelines/: indexing.py  retrieval.py
tests/: README.md  conftest.py  test_api.py  test_document_store.py  test_documents.py  test_llm_classifier.py  test_llm_provider.py  test_llm_router.py  test_pipelines.py
