[project]
name = "quilora-ai"
version = "0.1.0"
description = "Quilora - Ask your documents anything. Intelligent RAG-powered document assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "haystack>=0.42",
    "numpy>=2.4.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
]
