[project]
name = "quilora-ai"
version = "0.1.0"
description = "Quilora - Ask your documents anything. Intelligent RAG-powered document assistant."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Quilora Team"}
]
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "haystack-ai>=2.8.0",
    "aisuite>=0.1.3",
    "openai>=1.54.0",
    "anthropic>=0.39.0",
    "qdrant-client>=1.12.0",
    "PyPDF2>=3.0.1",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.12",
    "sentence-transformers>=3.3.0",
    "requests>=2.32.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
    "isort>=5.13.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.venv
  | \.pytest_cache
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", ".pytest_cache", "__pycache__"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", ".pytest_cache", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require external services)",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
